--- a/index.html
+++ b/index.html
@@ -231,14 +231,13 @@
     </table>
 
     <p>A partir de los artefactos y métricas que usamos en el script  se derivan decisiones claras: si proc_counts muestra diferencias entre n_images y n_processed debemos priorizar la corrección de rutas/formatos o añadir manejo de excepciones para formatos raros; si los histogramas antes/después de CLAHE muestran saturación (áreas con 0 o 255 extendidos), reduce clipLimit (por ejemplo a 1.5) o aumenta tileGridSize (por ejemplo a (16,16)). Respecto al tamaño objetivo, aunque en el pipeline usamos size=(224,224) (válido para modelos pre-entrenados y ahorro de memoria), argumentamos que para radiografías puede ser preferible 512×512 o, mejor aún, mantener la relación de aspecto y aplicar padding (esto preserva información anatómica crítica y evita sesgos por deformación geométrica).</p>
-    
-    <canvas id="validationChart" style="max-width:100%; height:320px;"></canvas>
 
     <h3>2. Descriptores de Forma</h3>    
     <p>La extracción de descriptores de forma reveló que las radiografías de tórax poseen patrones estructurales consistentes, pero con variaciones suficientes para que los descriptores capturen información relevante. HOG ofrece un nivel de detalle muy alto y sensible a los bordes, ideal para detectar texturas o cambios producidos por neumonía. Los Momentos de Hu, aunque muy pequeños, reflejan características globales estables y permiten comparar formas independientemente del tamaño o la orientación. Finalmente, los descriptores geométricos del contorno complementan la representación describiendo la forma general del área segmentada.</p>
 
     <div class="figure">
-      <img src="VisionPorComputador-trabajo_03/proyecto-imagenes-medicas/resultados/descriptores_forma/figures/PNEUMONIA_descriptores_forma.png" />
+      <img src="VisionPorComputador-trabajo_03/proyecto-imagenes-medicas/resultados/descriptores_forma/figures/PNEUMONIA_descriptores_forma.png" 
+        alt=imagen descriptores forma (PNEUMONIA)/>
       <div class="caption">Ilustración 2. Algunos descriptores de forma sobre una imagen procesada.</div>
     </div>
 
