Fix alt attribute for image in index.html

--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
 
     <div class="figure">
       <img src="VisionPorComputador-trabajo_03/proyecto-imagenes-medicas/resultados/descriptores_forma/figures/PNEUMONIA_descriptores_forma.png" 
-        alt=imagen descriptores forma (PNEUMONIA)/>
+        alt="imagen descriptores forma (PNEUMONIA)"/>
       <div class="caption">Ilustración 2. Algunos descriptores de forma sobre una imagen procesada.</div>
     </div>
 
