Fix formatting of image tag in index.html

--- a/index.html
+++ b/index.html
@@ -236,8 +236,7 @@
     <p>La extracción de descriptores de forma reveló que las radiografías de tórax poseen patrones estructurales consistentes, pero con variaciones suficientes para que los descriptores capturen información relevante. HOG ofrece un nivel de detalle muy alto y sensible a los bordes, ideal para detectar texturas o cambios producidos por neumonía. Los Momentos de Hu, aunque muy pequeños, reflejan características globales estables y permiten comparar formas independientemente del tamaño o la orientación. Finalmente, los descriptores geométricos del contorno complementan la representación describiendo la forma general del área segmentada.</p>
 
     <div class="figure">
-      <img src="VisionPorComputador-trabajo_03/proyecto-imagenes-medicas/resultados/descriptores_forma/figures/PNEUMONIA_descriptores_forma.png" 
-        alt="imagen descriptores forma (PNEUMONIA)"/>
+      <img src="VisionPorComputador-trabajo_03/proyecto-imagenes-medicas/resultados/descriptores_forma/figures/PNEUMONIA_descriptores_forma.png" alt="imagen descriptores forma (PNEUMONIA)" />
       <div class="caption">Ilustración 2. Algunos descriptores de forma sobre una imagen procesada.</div>
     </div>
 
