Add new references to index.html

--- a/index.html
+++ b/index.html
@@ -390,10 +390,22 @@
 
     <h2 id="referencias">Referencias</h2>
     <ol>
-      <li>Chen, L., Rottensteiner, F., & Heipke, C. (2021). Feature detection and description for image matching: from hand-crafted design to deep learning. Geo-Spatial Information Science, 24(1), 58–74.</li>
-      <li>Liu, C., Xu, J., & Wang, F. (2021). A review of keypoints’ detection and feature description in image registration. Scientific Programming (Vol. 2021).</li>
-      <li>Liu, W., et al. (2021). A Review of Image feature descriptors in Visual positioning. CEUR Workshop.</li>
-      <li>Zhou, L., Wu, G., Zuo, Y., Chen, X., & Hu, H. (2024). A comprehensive review of vision-based 3D reconstruction methods. Sensors, 24(7).</li>
+      <li>Acosta Oñate, L. M., Barba Jiménez, L., Vargas Quintero, L. P., Morales Daza, Y. J., & Consuegra González, J. L. (2025). Transformada de Gabor aplicada al análisis y caracterización de tumores cerebrales en imágenes de resonancia magnética. Ciencia e Ingeniería Neogranadina, 35(2), 65–86. https://doi.org/10.18359/rcin.7597.</li>
+      <li>Cortes, C., & Vapnik, V. (1995). Support-vector networks. Machine Learning, 20(3), 273–297.</li>
+      <li>Breiman, L. (2001). Random forests. Machine Learning, 45(1), 5–32.</li>
+      <li>Amazon Web Services. (s.f.). What is computer vision? https://aws.amazon.com/what-is/computer-vision/.</li>
+      <li>Dalal, N., & Triggs, B. (2005). Histograms of oriented gradients for human detection. In Proceedings of the IEEE Computer Society Conference on Computer Vision and Pattern Recognition (pp. 886–893).</li>
+      <li>Fauziah, H. H., Ningtias, D. R., Wahyudi, B., & Simanjuntak, J. N. (2025). Identification of lung cancer using gray level co-occurrence matrix (GLCM) and artificial neural network with backpropagation algorithm. Journal of Soft Computing Exploration, 6(1), 51–61. https://doi.org/10.52465/joscex.v6i1.543.</li>
+      <li>Gul, M. (2025). A novel local binary patterns based approach and proposed CNN model to diagnose breast cancer by analyzing histopathology images. IEEE Access, 13, 39610–39620. https://doi.org/10.1109/ACCESS.2025.3545052.</li>
+      <li>Haralick, R. M., Shanmugam, K., & Dinstein, I. (1973). Textural features for image classification. IEEE Transactions on Systems, Man, and Cybernetics, 3(6), 610–621.</li>
+      <li>Hosmer, D. W., Lemeshow, S., & Sturdivant, R. X. (2013). Applied logistic regression (3rd ed.). Wiley.</li>
+      <li>IBM. (s.f.-b). What is image classification? https://www.ibm.com/topics/image-classification.</li>
+      <li>IBM. (s.f.-a). What is deep learning? https://www.ibm.com/topics/deep-learning.</li>
+      <li>Krizhevsky, A., Sutskever, I., & Hinton, G. E. (2012). ImageNet classification with deep convolutional neural networks. In Advances in Neural Information Processing Systems, 25.</li>
+      <li>LeCun, Y., Bengio, Y., & Hinton, G. (2015). Deep learning. Nature, 521(7553), 436–444.</li>
+      <li>Manjunath, B. S., & Ma, W. Y. (1996). Texture features for browsing and retrieval of image data. IEEE Transactions on Pattern Analysis and Machine Intelligence, 18(8), 837–842.</li>
+      <li>Ojala, T., Pietikäinen, M., & Mäenpää, T. (2002). Multiresolution gray-scale and rotation invariant texture classification with local binary patterns. IEEE Transactions on Pattern Analysis and Machine Intelligence, 24(7), 971–987.</li>
+      <li>Schölkopf, B., & Smola, A. J. (2002). Learning with kernels: Support vector machines, regularization, optimization, and beyond. MIT Press.</li>
     </ol>
 
   </main>
